--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
 			<artifactId>hamcrest-core</artifactId>
 			<version>1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+		</dependency>
 	</dependencies>
 </project>
